# c-i2c-drivers

./: .gitignore  CMakeLists.txt  Kconfig  MyI2C2.c  MyI2C2.h  README.md  SConscript  i2c_bitbang.c  i2c_bitbang.h  i2c_driver.c  i2c_driver.h  i2c_drv.c  i2c_drv.h  i2c_module1.c  i2c_module1.h  i2c_module2.c  i2c_module2.h
EEPROM/: 24LC16.c  24LC16.h  24XX1025.c  24XX1025.h  24XX16.c  24XX16.h  eeprom_common.c  eeprom_common.h
M41T81/: m41t81.c  m41t81.h  rtcdrv.c  rtcdrv.h
MCP4018/: rheostat.c  rheostat.h
MCP9800/: MCP9800.c  MCP9800.h
PCF8523/: pcf8523.c  pcf8523.h
TC74/: tcdrv.c  tcdrv.h
common/: i2c_common.h
i2c_common/: i2c_common.c  i2c_common.h
i2c_devices/LTR559ALS/: ltr559als.c  ltr559als.h
i2c_devices/accelerometer/ICM-20948/: icm_20948.c  icm_20948.h
i2c_devices/accelerometer/LSM303AGR/: lsm303agr.c  lsm303agr.h
i2c_devices/accelerometer/WSEN_ITDS/: wsen_itds.c  wsen_itds.h
i2c_devices/eeprom/: 24LC16.h
i2c_devices/eeprom/24AA32/: 24AA32.c  24AA32.h
i2c_devices/eeprom/24LC1025/: 24lc1025.c  24lc1025.h
i2c_devices/eeprom/24LC16/: 24LC16.c  24LC16.h
i2c_devices/gnss/MIA-M10Q/: mia_m10q.c  mia_m10q.h
i2c_devices/io/MCP23008/: mcp23008.c  mcp23008.h
i2c_devices/io/TCA9534/: tca9534.c  tca9534.h
i2c_devices/light_proximity/LTR559ALS/: ltr559als.c  ltr559als.h
i2c_devices/light_proximity/VCNL4010/: vcnl4010.c  vcnl4010.h
i2c_devices/motor/DRV2605L/: drv2605l.c  drv2605l.h
i2c_devices/power/BQ24157/: bq24157.c  bq24157.h
i2c_devices/power/BQ27441-G1/: bq27441-g1.c  bq27441-g1.h
i2c_devices/power/BQ27Z758/: bq27z758.c  bq27z758.h
i2c_devices/power/SGM41513D/: sgm41513d.c  sgm41513d.h
i2c_devices/rtc/DS1307/: ds1307.c  ds1307.h
i2c_devices/rtc/M41T81/: m41t81.c  m41t81.h
i2c_devices/rtc/PCF85063A/: pcf85063a.c  pcf85063a.h
i2c_devices/rtc/PCF8523/: pcf8523.c  pcf8523.h
i2c_devices/rtc/RX8010/: rx8010.c  rx8010.h
i2c_devices/temperature/MCP9800/: MCP9800.c  MCP9800.h
i2c_devices/temperature/MS5837/: ms5837.c  ms5837.h
i2c_devices/temperature/SHT21/: sht21.c  sht21.h
i2c_devices/temperature/SHT3/: sht3.c  sht3.h
i2c_devices/temperature/SHT4/: sht4.c  sht4.h
i2c_devices/temperature/SHTC3/: shtc3.c  shtc3.h
i2c_devices/temperature/ZS05/: zs05.c  zs05.h
i2c_devices/touch/GT1151Q/: gt1151q.c  gt1151q.h
i2c_ports/PIC/: i2c_bitbang.c  i2c_bitbang.h  i2c_driver.h  i2c_module2.h
i2c_ports/dummy/: dummy_i2c_port.c  dummy_i2c_port.h
i2c_ports/esp-idf/: esp_idf_i2c_port.c  esp_idf_i2c_port.h
i2c_ports/posix/: posix_eeprom_file_i2c_port.c  posix_eeprom_file_i2c_port.h
i2c_ports/zephyr/: zephyr_i2c_port.c  zephyr_i2c_port.h
ports/PIC/: i2c_bitbang.h  i2c_driver.h
temperature/SHT21/: sht21.c  sht21.h
temperature/SHT3/: sht3.c  sht3.h
temperature/TC74/: tc74.c  tc74.h  tcdrv.c  tcdrv.h
temperature/ZS05/: zs05.c  zs05.h
test/: SConstruct
test/EEPROM/: eeprom_test.c
test/MCP9800/: temp_test.c
test/eeprom/: eeprom_test  eeprom_test.c  eeprom_test_Runner.c
test/temperature/MCP9800/: temp_test  temp_test.c  temp_test_Runner.c
